# Binned

./: .gitignore  README.md  meson.build  xyz.zateros.Binned.Devel.json  xyz.zateros.Binned.json
.github/workflows/: main.yml  nightly.yml  release.yml
data/: meson.build  xyz.zateros.Binned.desktop.in  xyz.zateros.Binned.gschema.xml  xyz.zateros.Binned.gschema.xml.in  xyz.zateros.Binned.metainfo.xml.in  xyz.zateros.Binned.service.in
data/icons/: meson.build
po/: Binned.pot  LINGUAS  POTFILES  POTFILES.in  hu.mo  hu.po  meson.build
src/: application.vala  binned.gresource.xml  binned.gresource.xml.in  config.vapi  meson.build  preferences.vala  window.vala
src/networking/: submit.vala
src/ui/: preferences.blp  window.blp
